force correct white space on code blocks

--- a/css/webots-doc.css
+++ b/css/webots-doc.css
@@ -240,7 +240,7 @@
   white-space: pre;
   word-wrap: break-word;
 }
-.webots-doc tr > td >  code {
+.webots-doc tr > td >  code, .webots-doc pre > code {
   white-space: normal;
 }
 .webots-doc p > code, .webots-doc li > code {
